<resources>
    <string name="app_name">Wallet</string>
    <string name="wallet">Wallet</string>
    <string name="store_name">Store Name</string>
    <string name="store_name_hint">Enter the name of the store</string>
    <string name="purchase_amount">Purchase Amount</string>
    <string name="purchase_amount_hint">Enter the purchase amount</string>
    <string name="paid_status_hint">Paid Status</string>
    <string name="submit_button_value">Submit</string>
    <string name="show_purchases_button_value">Show Purchases</string>
    <string name="load_dummy_data_button_value">Load Dummy Data</string>
    <string name="store_name_required_message">The name of the store is required</string>
    <string name="purchase_amount_required_message">The amount of the purchase is required</string>
    <string name="purchase_record_updated_successfully_message">The purchase has been successfully updated</string>
    <string name="purchase_record_created_successfully_message">The purchase has been successfully created</string>
    <string name="purchase_records_populated_successfully_message">The list of purchases has been populated with five records of Purchase</string>
    <string name="list_of_purchases">List Of Purchases</string>
    <string name="update_purchase">Update Purchase</string>
</resources>