<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/store_name_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_amount"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/purchase_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/purchase_amount_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/paid_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/paid_status_hint"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_value" />

    <Button
        android:id="@+id/load_data_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_dummy_data_button_value" />

    <Button
        android:id="@+id/show_purchases_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_purchases_button_value" />
</LinearLayout>